:white_check_mark: exercices fini sauf tuto.js

--- a/starter/03-DOM-modif/cours.html
+++ b/starter/03-DOM-modif/cours.html
@@ -10,7 +10,7 @@
         </h1>
         <div id="contenu">
             <ul id="langages">
-                <li id="cpp">C++</li>
+                <li id="cpp" class="hide">C++</li>
                 <li id="java">Java</li>
                 <li id="csharp">C#</li>
                 <li id="php">PHP</li>
